# delator-device

./: CMakeLists.txt  microphone_rec.c  svm.cc  train_data.csv  train_data_2.csv
include/: daemon.h  gprs_device.h  gps_device.h  microphone_device.h  thread_pool.h
src/: app.cc  daemon.cc  gprs_device.cc  gps_device.cc  microphone_device.cc  thread_pool.cc
